# assimp_view

./: .gitignore  .gitmodules  CMakeLists.txt  conanfile.py
osre/: CMakeLists.txt
osre/contrib/unzip/: CMakeLists.txt
osre/src/Engine/: CMakeLists.txt
osre/src/Engine/Platform/win32/: Win32Window.cpp
